logs/errors.log
2025-09-01T11:47:13.676Z [ERROR] [UNHANDLED:bootstrap] Error [ERR_MODULE_NOT_FOUND]: Cannot find package 'node-fetch' imported from C:\Users\Harshit\Documents\GTBB\utils\adjectives.js
    at Object.getPackageJSONURL (node:internal/modules/package_json_reader:255:9)
    at packageResolve (node:internal/modules/esm/resolve:767:81)
    at moduleResolve (node:internal/modules/esm/resolve:853:18)
    at defaultResolve (node:internal/modules/esm/resolve:983:11)
    at ModuleLoader.defaultResolve (node:internal/modules/esm/loader:783:12)
    at #cachedDefaultResolve (node:internal/modules/esm/loader:707:25)
    at ModuleLoader.resolve (node:internal/modules/esm/loader:690:38)
    at ModuleLoader.getModuleJobForImport (node:internal/modules/esm/loader:307:38)
    at ModuleJob._link (node:internal/modules/esm/module_job:183:49)
2025-09-01T12:48:33.156Z [ERROR] [UNHANDLED:bootstrap] file:///C:/Users/Harshit/Documents/GTBB/components/gtbb_options.js:2
import { addAnswer } from "../db/index.js";
         ^^^^^^^^^
SyntaxError: The requested module '../db/index.js' does not provide an export named 'addAnswer'
    at ModuleJob._instantiate (node:internal/modules/esm/module_job:228:21)
    at process.processTicksAndRejections (node:internal/process/task_queues:105:5)
    at async ModuleJob.run (node:internal/modules/esm/module_job:335:5)
    at async onImport.tracePromise.__proto__ (node:internal/modules/esm/loader:647:26)
    at async bootstrap (file:///C:/Users/Harshit/Documents/GTBB/index.js:60:19)
2025-09-01T15:23:47.588Z [ERROR] [UNHANDLED:interaction] TypeError: Cannot read properties of null (reading 'weekNum')
    at Object.execute (file:///C:/Users/Harshit/Documents/GTBB/commands/gtbb_store.js:68:26)
    at process.processTicksAndRejections (node:internal/process/task_queues:105:5)
    at async Client.<anonymous> (file:///C:/Users/Harshit/Documents/GTBB/index.js:91:7)
